Update nppStuff action, to make the failure verbose

--- a/.github/workflows/NppCommunityAudit.yml
+++ b/.github/workflows/NppCommunityAudit.yml
@@ -23,7 +23,7 @@ jobs:
           perl-version: '5.40'
       - name: 🔧 Install Prerequisites
         run: |
-          cpanm Exporter Data::Dump HTTP::Tiny JSON::XS JSON
+          cpanm --verbose --no-interactive Exporter Data::Dump HTTP::Tiny JSON JSON::XS
       - name: 🔨 Clean Topics & Posts
         working-directory: ./CommunityForum/.perl
         env:
